--- a/sandbox/5. Search and Sortings.ipynb
+++ b/sandbox/5. Search and Sortings.ipynb
@@ -33,6 +33,70 @@
     "            break\n",
     "    return False"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6ae2f61a-f6ab-47a2-926d-5bf949e766af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bubble_sort(arr: list) -> list:\n",
+    "    for i in range(len(arr)-1, 0, -1):\n",
+    "        for j in range(i):\n",
+    "            if arr[j] > arr[j+1]:\n",
+    "                arr[j+1], arr[j] = arr[j], arr[j+1]\n",
+    "    return arr\n",
+    "\n",
+    "assert bubble_sort([4, 32, 6]) == [4, 6, 32]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0518a9fe-9592-468f-9095-9043d18089be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def selection_sort(arr: list) -> list:\n",
+    "    for i in range(len(arr)-1, 0, -1):\n",
+    "        maxidx = 0\n",
+    "        for j in range(1, i+1):\n",
+    "            if arr[maxidx] < arr[j]:\n",
+    "                maxidx = j\n",
+    "        arr[i], arr[maxidx] = arr[maxidx], arr[i]\n",
+    "    return arr\n",
+    "\n",
+    "assert selection_sort([4, 32, 6]) == [4, 6, 32]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b63c11ba-2eb4-4b56-b972-b7eeab6a6b06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insertion_sort(arr: list) -> list:\n",
+    "    for i in range(1, len(arr)):\n",
+    "        current = arr[i]\n",
+    "        position = i\n",
+    "        while position > 0 and arr[position-1] > current:\n",
+    "            arr[position] = arr[position-1]\n",
+    "            position -= 1\n",
+    "        arr[position] = current\n",
+    "    return arr\n",
+    "        \n",
+    "assert insertion_sort([4, 32, 6]) == [4, 6, 32]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7e4ddc1-4c5d-4e99-a58d-4d59aff153bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -51,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
